objects/PMC_CPQ_QuoteExpirationBRCondition__mdt.object
<CustomObject>
    <description>Metadata to store the Expiration BR conditions.</description>
    <fields>
        <fullName>PMC_CPQ_CustomerType__c</fullName>
        <label>Customer Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DaysToAdd__c</fullName>
        <label>Days To Add</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Difference__c</fullName>
        <label>Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Hour__c</fullName>
        <label>Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OpportunityNullCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Null Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteClassification__c</fullName>
        <label>Quote Classification</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteSubType__c</fullName>
        <label>Quote Sub Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Region__c</fullName>
        <label>Region</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SalesOrg__c</fullName>
        <label>Sales Org</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_TimeCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ToggleTime__c</fullName>
        <label>Toggle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_TotalDiscountCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Total Discount Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Weekday__c</fullName>
        <label>Weekday</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Quote Expiration BR Condition</label>
    <pluralLabel>Quote Expiration BR Conditions</pluralLabel>
</CustomObject>